--- a/src/main/resources/templates/admin/add_product.html
+++ b/src/main/resources/templates/admin/add_product.html
@@ -46,7 +46,6 @@
                     <a href="/dashboard" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
                     <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
                     <a href="/dashboard/add-product" class="nav-item nav-link active"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
-                    <a href="/dashboard/update-product" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
                     <a href="/dashboard/category" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
@@ -174,7 +173,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary me-2">Tạo sản phẩm</button>
-                            <button type="submit" class="btn btn-outline-danger">Huỷ</button>
+                            <button type="button" class="btn btn-outline-danger">Huỷ</button>
                         </div>
                     </div>
                 </div>
