--- a/src/main/resources/templates/admin/edit_product.html
+++ b/src/main/resources/templates/admin/edit_product.html
@@ -45,7 +45,6 @@
                     <a href="/dashboard" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
                     <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
                     <a href="/dashboard/add-product" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
-                    <a href="/dashboard/update-product" class="nav-item nav-link active"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
                     <a href="/dashboard/category" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
@@ -76,7 +75,6 @@
                 </div>
             </nav>
             <!-- Navbar End -->
-
 
             <!-- Edit Product Form Start -->
             <form class="container-fluid pt-4 px-4 needs-validation" novalidate th:action="@{/dashboard/update-product/{id}(id=${product.id})}" th:object="${product}" method="post" enctype="multipart/form-data">
@@ -166,14 +164,12 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary me-2">Lưu</button>
-                            <button type="submit" class="btn btn-danger">Xoá sản phẩm</button>
+                            <button type="button" class="btn btn-danger">Xoá sản phẩm</button>
                         </div>
                     </div>
                 </div>
             </form>
             <!-- Edit Product Form End -->
-
-
 
             <!-- Footer Start -->
             <div class="container-fluid pt-4 px-4">
