--- a/src/main/resources/templates/admin/product.html
+++ b/src/main/resources/templates/admin/product.html
@@ -46,7 +46,6 @@
                     <a href="/dashboard" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
                     <a href="/dashboard/product" class="nav-item nav-link active"><i class="fa fa-box me-2"></i>Sản phẩm</a>
                     <a href="/dashboard/add-product" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
-                    <a href="/dashboard/update-product" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
                     <a href="/dashboard/category" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
@@ -86,13 +85,13 @@
                         <h6 class="mb-0">Danh sách sản phẩm</h6>
                     </div>
 
-                    <button id="deleteButton" class="btn btn-primary mb-3">Xoá</button>
+                    <button class="btn btn-primary mb-3">Xoá</button>
                     
                     <div class="table-responsive">
-                        <table id="productTable" class="table table-hover" style="width:100%">
+                        <table id="productTable" class="table table-hover table-bordered text-start align-middle mb-0">
                             <thead>
                                 <tr>
-                                    <th></th>
+                                    <th><input type="checkbox" class="form-check-input"></th>
                                     <th>ID</th>
                                     <th>Sản phẩm</th>
                                     <th>Danh mục</th>
@@ -104,7 +103,7 @@
                             </thead>
                             <tbody>
                                 <tr th:each="product : ${product}">
-                                    <td th:value="${product.id}"></td>
+                                    <td th:value="${product.id}"><input type="checkbox" class="form-check-input"></td>
                                     <td th:text="${product.id}"></td>
                                     <td th:text="${product.name}"></td>
                                     <td th:text="${product.category.categoryName}"></td>
@@ -152,14 +151,6 @@
 
     <!-- Template Javascript -->
     <script src="/js/main.js"></script>
-    <script src="/js/drop-image.js"></script>
-
-    <!-- Datatables -->
-    <script src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/2.0.7/js/dataTables.bootstrap5.js"></script>
-    <script src="https://cdn.datatables.net/select/2.0.2/js/dataTables.select.js"></script>
-    <script src="https://cdn.datatables.net/select/2.0.2/js/select.dataTables.js"></script>
-    <script src="/js/datatables.js"></script>
 </body>
 
 </html>
