--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -46,7 +46,6 @@
                     <a href="/dashboard" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
                     <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
                     <a href="/dashboard/add-product" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
-                    <a href="/dashboard/update-product" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
                     <a href="/dashboard/category" class="nav-item nav-link active"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
@@ -92,7 +91,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary me-2">Tạo danh mục</button>
-                    <button type="submit" class="btn btn-outline-danger">Huỷ</button>
+                    <button type="button" class="btn btn-outline-danger">Huỷ</button>
                 </div>
             </form>
             <!-- Create Product Form End -->
@@ -102,21 +101,20 @@
                     <div class="d-flex align-items-center justify-content-between mb-4">
                         <h6 class="mb-0">Danh mục</h6>
                     </div>
-                    <button id="deleteButton" class="btn btn-primary mb-3">Xoá</button>
+                    <button class="btn btn-primary mb-3">Xoá</button>
                     
                     <div class="table-responsive">
-                        <table id="productTable" class="table table-hover" style="width:100%"
-                               >
+                        <table id="productTable" class="table table-hover table-bordered">
                             <thead>
                                 <tr>
-                                    <th></th>
+                                    <th><input type="checkbox" class="form-check-input"></th>
                                     <th>Tên danh mục</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr th:each="categories : ${categories}">
-                                    <td th:value="${categories.categoryId}"></td>
-                                    <td th:text="${categories.categoryName}" ></td>
+                                    <td th:value="${categories.categoryId}"><input type="checkbox" class="form-check-input"></td>
+                                    <td th:text="${categories.categoryName}"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -150,15 +148,7 @@
     <!-- Template Javascript -->
     <script src="/js/main.js"></script>
     <script src="/js/form-validation.js"></script>
-<!--    <script src="/js/drop-image.js"></script>-->
 
-    <!-- Datatables -->
-    <script src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/2.0.7/js/dataTables.bootstrap5.js"></script>
-    <script src="https://cdn.datatables.net/select/2.0.2/js/dataTables.select.js"></script>
-    <script src="https://cdn.datatables.net/select/2.0.2/js/select.dataTables.js"></script>
-
-    <script src="/js/datatables.js"></script>
 </body>
 
 </html>
