--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -104,7 +104,7 @@
                     <button class="btn btn-primary mb-3">Xoá</button>
                     
                     <div class="table-responsive">
-                        <table id="productTable" class="table table-hover table-bordered">
+                        <table id="productTable" class="table table-hover table-bordered text-start align-middle mb-0">
                             <thead>
                                 <tr>
                                     <th><input type="checkbox" class="form-check-input"></th>
