--- a/src/main/resources/templates/admin/add_product.html
+++ b/src/main/resources/templates/admin/add_product.html
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary me-2">Tạo sản phẩm</button>
-                            <button type="button" class="btn btn-outline-danger">Huỷ</button>
+                            <button type="button" href="/dashboard/product" class="btn btn-outline-danger">Huỷ</button>
                         </div>
                     </div>
                 </div>
