--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary me-2">Tạo danh mục</button>
-                    <button type="button" class="btn btn-outline-danger">Huỷ</button>
+<!--                    <button type="button" class="btn btn-outline-danger">Huỷ</button>-->
                 </div>
             </form>
             <!-- Create Product Form End -->
@@ -101,7 +101,7 @@
                     <div class="d-flex align-items-center justify-content-between mb-4">
                         <h6 class="mb-0">Danh mục</h6>
                     </div>
-                    <button class="btn btn-primary mb-3">Xoá</button>
+                    <button id="deleteButton" class="btn btn-primary mb-3">Xoá</button>
                     
                     <div class="table-responsive">
                         <table id="productTable" class="table table-hover table-bordered text-start align-middle mb-0">
@@ -113,7 +113,7 @@
                             </thead>
                             <tbody>
                                 <tr th:each="categories : ${categories}">
-                                    <td th:value="${categories.categoryId}"><input type="checkbox" class="form-check-input"></td>
+                                    <td><input th:value="${categories.categoryId}" name="checkbox" type="checkbox" class="form-check-input"></td>
                                     <td th:text="${categories.categoryName}"></td>
                                 </tr>
                             </tbody>
@@ -152,3 +152,23 @@
 </body>
 
 </html>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        document.getElementById("deleteButton").addEventListener("click", function() {
+            var checkboxes = document.querySelectorAll('input[name="checkbox"]:checked');
+
+            const ids = Array.from(checkboxes)
+                .map(checkbox => checkbox.value)
+                .filter(value => value !== "on" && !isNaN(value))
+                .join(',');
+
+            if (ids.length > 0) {
+                // console.log(ids);
+                window.location.href = `/dashboard/category/${ids}`;
+            } else {
+                alert("Không thể xóa");
+            }
+        });
+    });
+</script>
