--- a/src/main/resources/templates/user/category.html
+++ b/src/main/resources/templates/user/category.html
@@ -323,7 +323,7 @@
                             <h4>Our Social</h4>
                             <ul class="list-unstyled">
                                 <li><a href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
-                                <li><a href="https://tiktok.com">Tiktok</a></li>
+                                <li><a href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
                             </ul>
                         </div>
                     </div>
@@ -331,8 +331,8 @@
                         <div class="single_footer_part">
                             <h4>Our Contact</h4>
                             <ul class="list-unstyled">
-                                <li><a href="">deprop.contact@gmail.com</a></li>
-                                <li><a href="">0901131465</a></li>
+                                <li><a href="mailto:deprop.contact@gmail.com">deprop.contact@gmail.com</a></li>
+                                <li><a href="tel:0901131465">0901131465</a></li>
                                 <li><a>District 9, Ho Chi Minh city</a></li>
                             </ul>
                         </div>
