--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -309,7 +309,7 @@
                               data-bs-parent="#paymentAccordion"
                       >
                           <div class="accordion-body">
-                              Chuyển khoản thông qua ngân hàng TPBank của chúng tôi.
+                              Chuyển khoản thông qua ngân hàng của chúng tôi.
                           </div>
                       </div>
                   </div>
