--- a/src/main/resources/templates/user/combo.html
+++ b/src/main/resources/templates/user/combo.html
@@ -148,7 +148,7 @@
             </div>
         </div>
 
-        <a href="/user/contact.html" class="contact_btn custom_btn btn_black">Liên hệ thuê</a>
+        <a href="/contact" class="contact_btn custom_btn btn_black">Liên hệ thuê</a>
 
         <!-- thumbnail -->
         <div class="thumbnail">
