--- a/src/main/resources/templates/user/contact.html
+++ b/src/main/resources/templates/user/contact.html
@@ -113,7 +113,7 @@
               <div class="contact_info col-lg-4">
                 <div class="contact_info_area">
                   <div class="contact_info_title">Số điện thoại</div>
-                  <a href="" class="contact_info_text"> 0901131465 </a>
+                  <a href="tel:0901131465" class="contact_info_text"> 0901131465 </a>
                 </div>
               </div>
               <div class="contact_info col-lg-4">
@@ -133,10 +133,10 @@
                       alt="facebook"
                     />
                   </a>
-                  <a href="">
+                  <a href="https://www.instagram.com/deprop_studio/">
                     <img
-                      src="/images/social_icon/tiktok_icon.svg"
-                      alt="tiktok"
+                      src="/images/social_icon/instagram_icon.svg"
+                      alt="instagram"
                     />
                   </a>
                 </div>
