--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -235,7 +235,7 @@
                       class="total_area list-group-item d-flex justify-content-between"
               >
                 <span>Phí vận chuyển:</span>
-                <strong><span class="delivery_fee"></span></strong>
+                <strong><span class="delivery_fee"> Liên Hệ</span></strong>
               </li>
               <li
                       class="total_area list-group-item d-flex justify-content-between"
