--- a/src/main/resources/templates/user/order-failure.html
+++ b/src/main/resources/templates/user/order-failure.html
@@ -44,12 +44,12 @@
         </div>
         <div class="order_noti mb-5">
           Thanh toán của bạn đã thất bại.<br />
-          Vui lòng trở về trang checkout hoặc trang chủ.
+          Vui lòng trở về Check out hoặc Trang chủ.
         </div>
         <div class="d-flex justify-content-center align-items-center">
-          <a href="/check-out" class="custom_btn btn_black">Trở về Checkout</a>
+          <a href="/check-out" class="custom_btn btn_black">Check out</a>
           <a href="/" class="custom_btn btn_greylight"
-            >Trở về Trang chủ</a
+            >Trang chủ</a
           >
         </div>
       </div>
